tests/baselines/reference/tsxAttributeResolution6.errors.txt
tests/cases/conformance/jsx/file.tsx(10,8): error TS2322: Type 'true' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(11,8): error TS2322: Type 'string' is not assignable to type 'boolean'.
tests/cases/conformance/jsx/file.tsx(12,2): error TS2322: Type '{}' is not assignable to type '{ n: boolean; }'.
  Property 'n' is missing in type '{}'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { n?: boolean; s?: string};
    		test2: { n: boolean; };
    	}
    }
    
    // Error
    <test1 s />;
           ~
!!! error TS2322: Type 'true' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:25: The expected type comes from property 's' which is declared here on type '{ n?: boolean; s?: string; }'
    <test1 n='true' />;
           ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:12: The expected type comes from property 'n' which is declared here on type '{ n?: boolean; s?: string; }'
    <test2 />;
     ~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ n: boolean; }'.
!!! error TS2322:   Property 'n' is missing in type '{}'.
    
    // OK
    <test1 n />;
    <test1 n={false} />;
    <test2 n />;
    